
2007-06-26  Benno Schulenberg  <benno@vertaalt.nl>

	* TODO: Update the steps to be taken during the server switch.

2007-06-25  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/generate-static-pages: Add the ability to regenerate just the
	domains or teams given on the command line.

	* bin/generate-static-pages, README: Adjust docstring and manual.

	* bin/generate-static-pages: Handle mistyped arguments better.

	* bin/create-mail-aliases, registry/Makefile: Also create a procmailrc
	file with rules to reach team lists.

	* lib/localweb.py: On the domain pages, use the translator's current
	email address when it exists, instead of the one from the PO file.

2007-06-24  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/htmlpage.py: Give each HTML page a Content-Type meta header tag,
	hard-coded as UTF-8, as everything should be in that encoding now.  If
	some page is not, it's a fault, and should get reported.

	* webgen/welcome.html, webgen/software.all: Fix a typo, and point to
	'poEdit' instead of the dead 'gtranslator'.

	* registry/registry.sgml: Synced with Montréal.

	* registry/Makefile: Fix name of script.

	* lib/localweb.py: Clearer error messages during page generation.

	* bin/po-register: Make new package directories group writable and
	group sticky.

	* bin/po-expire: Remove the workaround for old-style symlinks.
	Plus some small tweaks and whitespace fixes.  And re-tweaks.

	* README: Updates and additions.

	* Makefile: Store the project tarball in an accessible place.

2007-06-23  Benno Schulenberg  <benno@vertaalt.nl>

	* web/Makefile, doc/whydisclaim.html, doc/disclaim.txt:
	Install the dislaimer text on the website, link to it, and
	slightly tweak its layout.

	* web/html-to-cgi, web/to-html, web/registry.cgi.in: Recode a few
	overlooked files to UTF-8, and adjust their docstrings.

	* web/layout.html, lib/config.py, doc/Makefile, web/Makefile:
	Rename 'layout.html' to 'layout.html.in', to bring it in line with